@@ -13,6 +13,7 @@
 * Dev - Metadata: calendar info moved to the next line
 * Dev - Metadata: term "price" change to "price from"
 * Dev - Metadata: term “duration” added to duration meta
+* Fix - Fixed the default pagination from LSX
 
 ### 1.0.4
 * Removed the last of the LSX_TO_POSTEXPIRATOR_TYPES constants
